--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lessmin": "~0.0.1-1",
     "temp": "~0.7.0",
     "minimist": "~0.0.8",
-    "should": "~3.2.0-beta1"
+    "should": "~3.2.0-beta1",
+    "temporary" : "~0.0.8"
   },
   "devDependencies": {
     "mocha": "~1.18.2"
